--- a/0-intro.tex
+++ b/0-intro.tex
@@ -5,7 +5,7 @@
 \pagenumbering{arabic}
 
 % separation in general
-Industrial gas separation processes is widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
+Industrial gas separation processes are widely used to supply purified reactants and inert gases for the chemical, the health, the agricultural and the food industries. It can also be used to mitigate negative environmental impact of some industrial activities: in concrete or steel production factories, the highly problematic \ce{CO2} emissions could be separated from other atmospheric gases and captured; in nuclear treatment plants, volatile radioactive compounds (e.g., $^{85}$Kr) can also be captured through an effective separation. Different small molecules are usually considered in these processes such as nitrogen, oxygen, carbon
 dioxide, hydrogen, methane, nitrous oxide or the noble gases. The xenon/krypton separation studied in this thesis is usually performed to extract xenon and krypton from the atmosphere,\autocite{kerry2007industrial} but the nuclear industry constitutes a more abundant source of noble gases.\autocite{Banerjee_2014} 
 
 % nanoporous
