--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -536,7 +536,7 @@ I calculated this xenon diffusion activation energy for all the 5,125 structures
       \includegraphics[width=\textwidth]{figures/5-diffusion/difflog_barrier_Df_uff_2.pdf}
       \caption{PLD over \SI{6}{\angstrom}}\label{fgr:barrier_diffusion_b}
   \end{subfigure}
-    \caption{ Scatterplots of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) compared to the barrier activation energy $E\e{a}$ in \si{\kJ\per\mol} (a) for all structures  and (b) for the structures with a PLD over \SI{6}{\angstrom}.}\label{fgr:barrier_diffusion}
+    \caption{ Scatterplots of the $\log_{10}$ of the diffusion coefficient (in \si{\square\cm\per\s}) compared to the diffusion activation energy $E\e{a}$ in \si{\kJ\per\mol} (a) for all structures  and (b) for the structures with a PLD above \SI{6}{\angstrom}. For all structures, the Pearson correlation coefficient is equal to $-0.77$, whereas for the restriction to structures with a PLD below \SI{6}{\angstrom} this correlation is stronger with a Pearson coefficient of $-0.85$. For structures with a PLD above \SI{6}{\angstrom}, this coefficient decreases to $-0.74$.}\label{fgr:barrier_diffusion}
 \end{figure}
 
 As shown on Figure~\ref{fgr:barrier_diffusion_a}, the activation energy is correlated to the diffusion coefficient for xenon. The correlation seems to be much stronger for the points with a PLD around \SI{4.5}{\angstrom}, and for PLD values over \SI{6}{\angstrom}, there still is a correlation but it seems weaker than for smaller values of PLD as shown by the Figure~\ref{fgr:barrier_diffusion_b}
