--- a/9-conclusion.tex
+++ b/9-conclusion.tex
@@ -7,7 +7,7 @@ This thesis explored different approaches to find the best nanoporous materials 
 
 The second chapter focused on different methodologies to evaluate this selectivity in different physical conditions, and how a screening can draw a realistic picture of a selective material.\autocite{Ren_2021} The influence of the composition, the pressure and the some structural descriptors were studied thoroughly. To achieve maximal selectivity, the pore size needs to be tailored to the size of a xenon. The Xe/Kr separation can be approximately described by the xenon affinity with the material, and this affinity is enthalpic in nature. The effect of a higher partial pressure of xenon results in the saturation of the most favorable pores for xenon adsorption, which is at the origin of the observed selectivity decrease in some materials.
  
-Because of the prominent role of the enthalpic term, the third chapter introduced faster sampling techniques to evaluate the selectivity in the infinite-dilution case. Along with the most used Widom insertion, this work described various biased sampling techniques such as the Voronoi sampling or the surface sampling (RAESS). The RAESS algorithm\autocite{Ren_2023} were proven to be faster than a Widom insertion and much more accurate than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling based on a symmetric grid (GrAED) was introduced to provide valuable energy descriptors to design finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used in an ML modeling, for instance.
+Because of the prominent role of the enthalpic term, the third chapter introduced faster sampling techniques to evaluate the selectivity in the infinite-dilution case. Along with the most used Widom insertion, this work described various biased sampling techniques such as the Voronoi sampling or the surface sampling (RAESS). The RAESS algorithm\autocite{Ren_2023} was proven to be faster than a Widom insertion and much more accurate than the previously introduced Voronoi energy\autocite{Simon_2015} on the CoRE MOF 2019 database. Finally, an unbiased sampling based on a symmetric grid (GrAED) was introduced to provide valuable energy descriptors to design finely tuned energetic descriptors. The GrAED algorithm provides interesting descriptors that can be further used in an ML modeling, for instance.
 These techniques can be used in a multiscale screening to faster single out interesting materials for more time-consuming calculations or experiments. 
 
 To get a GCMC level of accuracy combined with a speed comparable with faster low-dilution calculations, an ML model based on structural, chemical and energetic descriptors was proposed in the fourth chapter.\autocite{Ren_2023_ml} This model was proven to be very accurate and could be used to provide GCMC grade evaluations with minimal computation resources. The interpretation of this ML model opened up new ways of tackling the structure-property relationship through other methods than the standard correlation analyses. 
